# crewai_research_project

./: pyproject.toml
src/sqe_project/: agents.py  main.py  main1.py  tasks.py
