[project]
name = "sqe-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Talha Iftikhar", email = "talhaiftikhar13209@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sqe-project = "sqe_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
